@@ -13,6 +13,7 @@ export(port)
 export(query)
 export(scheme)
 export(suffix_extract)
+export(url_compose)
 export(url_decode)
 export(url_encode)
 export(url_parameters)
