@@ -30,7 +30,7 @@ HTTP requests from R), but not for large-scale analysis.
 url_parse("https://en.wikipedia.org/wiki/Article")
 }
 \seealso{
-\code{url_parameters} for extracting values associated with particular keys in a URL's
-query string.
+\code{\link{url_parameters}} for extracting values associated with particular keys in a URL's
+query string, and \code{\link{url_compose}}, which is \code{url_parse} in reverse.
 }
 
